build_after_basefragment_fix.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:l8DexDesugarLibDebug UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mergeDebugNativeLibs UP-TO-DATE
> Task :app:stripDebugDebugSymbols UP-TO-DATE
> Task :app:validateSigningDebug UP-TO-DATE
> Task :app:writeDebugAppMetadata UP-TO-DATE
> Task :app:writeDebugSigningConfigVersions UP-TO-DATE
> Task :app:kaptGenerateStubsDebugKotlin

> Task :app:kaptDebugKotlin FAILED
warning: Kapt support in Moshi Kotlin Code Gen is deprecated and will be removed in 2.0. Please migrate to KSP. https://github.com/square/moshi#codegen
.\gradlew.bat : D:\Pro
ject\nfgplus\app\src\m
ain\java\com\theflexpr
oject\thunder\fragment
s\ChangeTMDBFragment.j
ava:4: error: static 
import only from 
classes and interfaces
At line:1 char:1
+ .\gradlew.bat 
assembleDebug 2>&1 | 
Out-File -FilePath 
build_after_bas ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (D:\Project   
 \nfgp... and inte    
rfaces:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
import static com.thef
lexproject.thunder.uti
ls.StringUtils.tmdbIdE
xtractor_FromLink;
^
D:\Project\nfgplus\app
\src\main\java\com\the
flexproject\thunder\fr
agments\ChangeTMDBFrag
ment.java:5: error: 
static import only 
from classes and 
interfaces
import static com.thef
lexproject.thunder.uti
ls.StringUtils.tmdbIdE
xtractor_FromLink_TV;
^
D:\Project\nfgplus\app
\src\main\java\com\the
flexproject\thunder\fr
agments\ManageDatabase
Fragment.java:3: 
error: static import 
only from classes and 
interfaces
import static com.thef
lexproject.thunder.uti
ls.StorageUtils.verify
StoragePermissions;
^
D:\Project\nfgplus\app
\src\main\java\com\the
flexproject\thunder\fr
agments\SeriesFragment
.java:3: error: 
static import only 
from classes and 
interfaces
import static com.thef
lexproject.thunder.uti
ls.ColapsingTitle.coll
apseTitle;
^
D:\Project\nfgplus\app
\src\main\java\com\the
flexproject\thunder\fr
agments\SeriesFragment
.java:4: error: 
static import only 
from classes and 
interfaces
import static com.thef
lexproject.thunder.uti
ls.ColapsingTitle.expa
ndTitle;
^
warning: The following options were not recognized by any processor: '[dagger.fastInit, dagger.hilt.android.internal.disableAndroidSuperclassValidation, dagger.hilt.android.internal.projectType, dagger.hilt.internal.useAggregatingRootProcessor, room.schemaLocation, kapt.kotlin.generated]'

[Incubating] Problems report is available at: file:///D:/Project/nfgplus/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for 
task ':app:kaptDebugKo
tlin'.
> A failure occurred 
while executing org.je
tbrains.kotlin.gradle.
internal.KaptWithoutKo
tlincTask$KaptExecutio
nWorkAction

* Try:
> Run with 
--stacktrace option 
to get the stack 
trace.
> Run with --info or 
--debug option to get 
more log output.
> Run with --scan to 
get full insights.
> Get more help at htt
ps://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.13/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 10s
35 actionable tasks: 3 executed, 32 up-to-date
